<?xml version="1.0" encoding="utf-8"?>
<resources>

	<string name="app_name">GUIDE FOR - HOW TO - TIPS</string> 
    <string name="app_desc">GUIDE FOR - HOW TO - TIPS</string>
    <string name="title_activity_details">Details</string>
    <string name="action_settings">Settings</string>
    <string name="desc_splash">GUIDE FOR - HOW TO - TIPS</string>
    <string name="rate_us">RATE US</string>
    <string name="share_it">SHARE IT</string>
    <string name="improvement">Improvement</string>
    <string name="searchHint">Search</string>
    <string name="rate">RATE</string>
    <string name="exit">Exit</string>
    <string name="noArticles">No Articles</string>
    <string name="categories">Categories</string>
    <string name="allArticles">All Articles</string>
    <string name="description_rate">This app needs your help to improve the app. Could you vote it in Play Store? :)</string>


</resources>
