<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#f4f4f4"
    tools:ignore="HardcodedText" >

    <LinearLayout
        android:id="@+id/liner_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="UselessParent"
		android:paddingBottom="50dp">

		<RelativeLayout
			android:layout_width="match_parent"
			android:layout_height="170dp">

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            android:padding="0dp"
            android:scaleType="fitXY"
            android:src="@drawable/operamini"/>

			<RelativeLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:paddingBottom="10dp"
				android:background="#33000000"
				android:focusable="true"
				android:focusableInTouchMode="true">
				<AutoCompleteTextView
					android:id="@+id/text_search"
					android:layout_width="match_parent"
					android:layout_height="40dp"
					android:hint="@string/searchHint"
					android:layout_marginTop="10dp"
					android:layout_marginLeft="10dp"
					android:layout_marginStart="10dp"
					android:layout_marginRight="60dp"
					android:layout_marginEnd="60dp"
					android:textColorHint="#ededed"
					android:textColor="#fff"
					android:layout_alignParentLeft="true"
					android:layout_alignParentStart="true"
					android:backgroundTint="#fff"
					android:nextFocusUp="@id/text_search"
					android:nextFocusLeft="@id/text_search"/>
				<ImageView
					android:id="@+id/btn_search"
					android:layout_width ="40dp"
					android:layout_height="40dp"
					android:background ="@drawable/selector_button"
					android:src ="@drawable/ic_search"
					android:layout_alignParentRight="true"
					android:layout_alignParentEnd="true"
					android:layout_marginTop="10dp"
					android:layout_marginRight="10dp"
					android:layout_marginEnd="10dp"/>
			</RelativeLayout>
			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal"
				android:layout_marginTop="105dp">
				<TextView
					android:id="@+id/tab_cat"
					android:layout_width="0dp"
					android:layout_height="45dp"
					android:layout_weight="1"
					android:textColor="@color/white"
					android:text="@string/categories"
					android:background="@drawable/rounded_corner_dark"
					android:layout_margin="5dp"
					android:textSize="16dp"
					android:gravity="center"/>
				<TextView
					android:id="@+id/tab_allArticles"
					android:layout_width="0dp"
					android:layout_height="45dp"
					android:layout_weight="1"
					android:text="@string/allArticles"
					android:textColor="@color/white"
					android:background="@drawable/rounded_corner"
					android:layout_margin="5dp"
					android:textSize="16dp"
					android:gravity="center"/>
			</LinearLayout>
		</RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/rateus2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:background="#241823"
                android:text="@string/rate_us"
                android:drawableLeft="@drawable/ic_star"
			    android:drawablePadding="2dip"
			    android:paddingLeft="30dip"
			    android:paddingRight="26dip"
			    android:singleLine="true"
                android:textColor="@color/menuTextcolor"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/play2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:background="#260216"
                android:text="@string/share_it"
                android:drawableLeft="@drawable/ic_share"
			    android:drawablePadding="2dip"
			    android:paddingLeft="30dip"
			    android:paddingRight="26dip"
			    android:singleLine="true"                
                android:textColor="@color/menuTextcolor"
                tools:ignore="ButtonStyle" />
        </LinearLayout>
		<TextView
			android:id="@+id/noArticles"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:text="@string/noArticles"
			android:gravity="center"
			android:textSize="18dp"
			android:visibility="gone"
			/>
        <ListView
            android:id="@+id/listViewtest"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
	        android:paddingLeft="8dp"
	        android:paddingRight="8dp"
	        android:paddingTop="8dp"
            android:dividerHeight="6dp"
            android:divider="#f4f4f4"
	        android:background="#f4f4f4"
            tools:ignore="InefficientWeight"
        	>
        </ListView> 
       
    </LinearLayout>

    <LinearLayout
        android:id="@+id/unitads"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:orientation="vertical" >
    </LinearLayout>

</RelativeLayout>
